--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 python:
-  - "3.7"
+  - "3.9"
 
 sudo: false
 cache: pip
 
-install: pip install -r requirements.txt
+install: pip install -r reqs.txt
 script: sphinx-build -nWT -b dummy source build
 
 after_failure:
